making final adjustments

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -54,6 +54,51 @@
                     <h3>Book Your Adventure Today!</h3>
                     <p>Ready for the thrill of a lifetime?<a class="ctuBtn" href="contact.html">Contact us</a> to reserve your spot! </p>
                 </div>
+                <div class="tripPrices">
+                    <h2>Trip Summary</h2>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Trip Name</th>
+                            <th>Duration</th>
+                            <th>Difficulty</th>
+                            <th>Price</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Osiris Rapid</td>
+                            <td>3 Hours</td>
+                            <td>Beginner</td>
+                            <td>$75</td>
+                        </tr>
+                        <tr>
+                            <td>Maguito Gandalf Rapid</td>
+                            <td>6 Hours</td>
+                            <td>Intermediate</td>
+                            <td>$100</td>
+                        </tr>
+                        <tr>
+                            <td>Gotham Kitty Adventure</td>
+                            <td>Full Day</td>
+                            <td>Advanced</td>
+                            <td>$200</td>
+                        </tr>
+                        <tr>
+                            <td>Noodle Creek</td>
+                            <td>Full Day</td>
+                            <td>Advanced</td>
+                            <td>$200</td>
+                        </tr>
+                        <tr>
+                            <td>EMemmetsaurous Rapid</td>
+                            <td>Full Day</td>
+                            <td>Expert</td>
+                            <td>$300</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="subscribeNow">
                     <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
                     <form class="sbscbFmt" action="#" method="post">
