consolidated and removed css selectors to make it less than 100

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,8 +25,8 @@
             </div>
         </header>
         <main>
-            <section class="kittyTeam">
-                <h2 class="contactColor1">Meet Our Team</h2>
+            <section class="contactBox">
+                <h2 class="contactColor">Meet Our Team</h2>
                 <div class="employeePics">
                   <figure>
                     <img src="images/Gandalf.png" alt="Smiling Gandalf">
@@ -43,7 +43,7 @@
                 </div>
             </section>
             <div class="contactWrapper">
-                <section class="contactInfo">
+                <section class="contactBox">
                     <h1 class="contactColor">Contact Us</h1>
                     <div class="contactDetails">
                         <p><strong>Address: </strong> 2641 Front St, Cuyahoga Falls, OH 44221</p>
@@ -52,8 +52,8 @@
                     </div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11373.672760835567!2d-81.47925713955719!3d41.14269831884363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCuyahoga%20Falls%20river%2C%20oh!5e0!3m2!1sen!2sus!4v1743370669309!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </section>
-                <section class="formSection">
-                    <h2 class="contactColor2">Send Us a Message</h2>
+                <section class="contactBox">
+                    <h2 class="contactColor">Send Us a Message</h2>
                     <form action="#" method="post">
                     <label for="name"><strong>Name:</strong></label>
                     <input type="text" id="name" name="fname" placeholder="Enter your name" required>
