--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -107,6 +107,7 @@
                         <button id="button" type="submit">Sign Up Now</button>
                     </form>
                 </div>
+                </div>
             </section>
         </main>        
         <footer>
