--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -50,7 +50,7 @@
                     </figure>
             </section>
             <section class="tripPrices">
-                <h2>Trip Summary</h2>
+                <h2>Rapid Prices</h2>
                 <table>
                     <thead>
                     <tr>
