--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -27,27 +27,27 @@
         <main class="tripContent">
             <section class="tripDetails">
                 <h2>Our Adventures</h2>
-                    <figure>
+                    <div class="tripCards">
                         <img src="images/rafting6.jpg" alt="Sunset River Ride">
-                        <figcaption>
-                            <h3>Maguito Gandalf Rapide</h3>
-                            Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
-                        </figcaption>
-                    </figure>
-                    <figure>
+                        <div class="tpTxt">
+                            <h3>Maguito Gandalf Rapide</h3> 
+                            <p>Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
+                    <div class="tripCards">       
                         <img src="images/rafting2.jpg" alt="Class III Rapids">
-                        <figcaption>
+                        <div class="tpTxt">
                             <h3>Osiris Rapid</h3>
-                            Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
-                        </figcaption>
-                    </figure>
-                    <figure>
+                            <p>Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
+                    <div class="tripCards">       
                         <img src="images/rafting5.jpg" alt="Extreme Whitewater">
-                        <figcaption>
+                        <div class="tpTxt">
                             <h3>Gotham Kitty Adventure</h3>
-                            For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
-                        </figcaption>
-                    </figure>
+                            <p>For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
             </section>
             <section class="tripPrices">
                 <h2>Rapid Prices</h2>
