--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="About US rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
-        <title>About Us | White Water Rafting</title>
+        <title>Trips | White Water Rafting</title>
     </head> 
     <body>
         <header class="headerGrid">
