updating div on line 110

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="About US rafting information page.">
+        <meta name="description" content="Contacts rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
         <title>Contact | White Water Rafting</title>
     </head> 
