--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
         <script defer src="scripts/carousel.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="About US rafting information page.">
+        <meta name="description" content="Index rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
         <title>Home | White Water Rafting</title>
     </head> 
