--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="About US rafting information page.">
+        <meta name="description" content="Trips rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
         <title>Trips | White Water Rafting</title>
     </head> 
@@ -99,14 +99,14 @@
                     <h3>Book Your Adventure Today!</h3>
                     <p>Ready for the thrill of a lifetime?<a class="ctuBtn" href="contact.html">Contact us</a> to reserve your spot! </p>
                 </div>
-                <div class="subscribeNow">
-                    <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
-                    <form class="sbscbFmt" action="#" method="post">
-                        <input type="text" id="name" name="fname" placeholder="Enter your name" required>
-                        <input type="email" id="email" name="email" placeholder="Your email address" required>
-                        <button id="button" type="submit">Sign Up Now</button>
-                    </form>
-                </div>
+                    <div class="subscribeNow">
+                        <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
+                        <form class="sbscbFmt" action="#" method="post">
+                            <input type="text" id="name" name="fname" placeholder="Enter your name" required>
+                            <input type="email" id="email" name="email" placeholder="Your email address" required>
+                            <button id="button" type="submit">Sign Up Now</button>
+                        </form>
+                    </div>
                 </div>
             </section>
         </main>        
