--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="styles/rafting.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>About Us | White Water Rafting</title>
         <meta name="description" content="About US rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
-        <title>About Us | White Water Rafting</title>
+        <link rel="stylesheet" href="styles/rafting.css">
+        
     </head> 
     <body>
         <header class="headerGrid">
