--- a/wwr/index.html
+++ b/wwr/index.html
@@ -36,7 +36,9 @@
             <section class="newsletter">
                 <h3 class="nwsltrTtl">Don't miss any news sign up to our newsletter</h3>
                 <form class="nswltrFmt" action="#" method="post">
+                    <label for="name"><strong>Name:</strong></label>
                     <input type="text" id="name" name="fname" placeholder="Enter your name" required>
+                    <label for="email"><strong>Email:</strong></label>
                     <input type="email" id="email" name="email" placeholder="Your email address" required>
                     <button id="button" type="submit">Sign Up Now</button>
                 </form>
