updating form on trips to make it so that it matches the contact and index page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -103,9 +103,11 @@
                 <div class="subscribeNow">
                     <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
                     <form class="sbscbFmt" action="#" method="post">
-                        <input type="text" id="name" name="fname" placeholder="Enter your name" required>
-                        <input type="email" id="email" name="email" placeholder="Your email address" required>
-                        <button id="button" type="submit">Sign Up Now</button>
+                        <label for="name"><strong>Name:</strong><input type="text" id="name" name="fname" placeholder="Enter your name" required></label>
+                    
+                    <label for="email"><strong>Email:</strong><input type="email" id="email" name="email" placeholder="Your email address" required></label>
+                    
+                    <button id="button" type="submit">Sign Up Now</button>
                         </form>
                     </div>
             </section>
