--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About Us | White Water Rafting</title>
         <meta name="description" content="About US rafting information page.">
+        <meta name="description" content="History information.">
+        <meta name="description" content="pictures of rapids">
         <meta name="author" content="Allison Ruault Wright">
         <link rel="stylesheet" href="styles/rafting.css">
         
