--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contact | White Water Rafting</title>
         <meta name="description" content="Contacts rafting information page.">
+        <meta name="description" content="kitty pictures">
+        <meta name="description" content="forms">
         <meta name="author" content="Allison Ruault Wright">
         <link rel="stylesheet" href="styles/rafting.css">
     </head> 
