--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home | White Water Rafting</title>
         <meta name="description" content="Index rafting information page.">
+        <meta name="description" content="Newsletter sign up form.">
+        <meta name="description" content="hook on how to get people to the trips page.">
         <meta name="author" content="Allison Ruault Wright">
         <link rel="stylesheet" href="styles/rafting.css">
     </head> 
