--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Trips | White Water Rafting</title>
         <meta name="description" content="Trips rafting information page.">
+        <meta name="description" content="Prices on page">
+        <meta name="description" content="Description of trips">
         <meta name="author" content="Allison Ruault Wright">
         <link rel="stylesheet" href="styles/rafting.css">
         
